  saved/restored when performing a GC. This could potentially lead to a
  segfault.
  (Nicolás Ojeda Bär, report by Xavier Leroy, review by Xavier Leroy)

- #9909: Remove caml_code_area_start and caml_code_area_end globals (no longer
  needed as the pagetable heads towards retirement).
  (David Allsopp, review by Xavier Leroy)

- #9951: Ensure that the mark stack push optimisation handles naked pointers
  (KC Sivaramakrishnan, reported by Enguerrand Decorne, review by Gabriel
   Scherer, and Xavier Leroy)

- #9534, #9947: Introduce a naked pointers checker mode to the runtime
  (configure option --enable-naked-pointers-checker).  Alarms are printed
  when the garbage collector finds out-of-heap pointers that could
  cause a crash in no-naked-pointers mode.
  (Enguerrand Decorne, KC Sivaramakrishnan, Xavier Leroy, Stephen Dolan,
  David Allsopp, Nicolás Ojeda Bär review by Xavier Leroy, Nicolás Ojeda Bär)

### Code generation and optimizations:

- #9551: ocamlc no longer loads DLLs at link time to check that
  external functions referenced from OCaml code are defined.
  Instead, .so/.dll files are parsed directly by pure OCaml code.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Gabriel Scherer,
   Anil Madhavapeddy, and Xavier Leroy)

- #9620: Limit the number of parameters for an uncurried or untupled
   function.  Functions with more parameters than that are left
   partially curried or tupled.
   (Xavier Leroy, review by Mark Shinwell)

- #9752: Revised handling of calling conventions for external C functions.
   Provide a more precise description of the types of unboxed arguments,
   so that the ARM64 iOS/macOS calling conventions can be honored.
   (Xavier Leroy, review by Mark Shinwell and Github user @EduardoRFS)

- #9838: Ensure that Cmm immediates are generated as Cconst_int where
  possible, improving instruction selection.
  (Stephen Dolan, review by Leo White and Xavier Leroy)

- #9864: Revised recognition of immediate arguments to integer operations.